--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <!-- -------------------------------------------------------------------pick-player-screen----------------------------
+    <!-- -------------------------------------------------------------------pick-player-screen---------------------------->
 
     <div id="pick-player-screen">
         <div id="xo-img-container">
@@ -91,10 +91,10 @@
             <button id="vs-cpu">NEW GAME (VS CPU)</button>
             <button id="vs-player">NEW GAME (VS PLAYER)</button>
         </div>
-    </div> -->
+    </div> 
 
 
-    <script src="script.js"></script>
+    <script src="script.js" type="javascript"></script>
 
 
 </body>
